force-app/main/default/objects/Timezone_List__c/Timezone_List__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>SDS-2581 Timezone</description>
    <label>Timezone List</label>
</CustomObject>