force-app/main/default/objects/Timezone_List__c/fields/Offset__c.field-meta.xml
<CustomField>
    <fullName>Offset__c</fullName>
    <label>Offset</label>
    <length>12</length>
    <type>Text</type>
</CustomField>