force-app/main/default/objects/Timezone_List__c/fields/Timezone_Type__c.field-meta.xml
<CustomField>
    <fullName>Timezone_Type__c</fullName>
    <label>Timezone Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>