force-app/main/default/objects/Timezone_List__c/fields/TimeZoneId__c.field-meta.xml
<CustomField>
    <fullName>TimeZoneId__c</fullName>
    <label>TimeZoneId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>